# zephyr_debug

./: .gitignore  LICENSE  README.md  west.yml
RTCtrlTemplate/: ozone_rt1176_evkb.jdebug  prj.conf
RTCtrlTemplate/src/: main.c
applications/RT1176_relocate/: CMakeLists.txt  prj.conf
applications/RT1176_relocate/src/: main.c
applications/hello_zephyr/: CMakeLists.txt  MCXA156.jdebug  MCXN947.jdebug  RT1050.jdebug  ozone_imx93.jdebug  prj.conf
applications/hello_zephyr/boards/: imx93_evk_mimx9352_a55.conf  imx93_evk_mimx9352_a55.overlay
applications/telnet_with_rndis/: README.rst  ozone.jdebug
applications/wifi_shell/boards/: mimxrt1060_evk_mimxrt1062_qspi_C.conf  mimxrt1060_evk_mimxrt1062_qspi_C.overlay
hello_world/: CMakeLists.txt  RT1176__EVKA.jdebug  prj.conf
hello_world/src/: main.c
zephyr/: module.yml
